# sphere-hello-api

./: .gitignore  .travis.yml  LICENSE  README.md  create_config.sh  renovate.json
bash/: hello-api
clojure/: README.md  project.clj
clojure/resources/: config.clj
crystal/: README.md  shard.yml
crystal/spec/: spec_helper.cr  sphereio_spec.cr
crystal/src/: sphereio.cr
curl/: README.md  config  hello-api
go/: .gitignore  README.md  hello.go
groovy/: .gitignore  README.md  apidump.groovy  config.groovy  index.groovy  runtest.sh  server.groovy
haskell/: README.md  config.json  sphere-hello-api.cabal
haskell/src/: Main.hs
haskell/src/SphereHelloApi/: ApiAccess.hs  Products.hs  Tokens.hs
ios/: Podfile  README.md
ios/HelloAPI/: CTAppDelegate.h  CTAppDelegate.m  CTDetailViewController.h  CTDetailViewController.m  CTMasterViewController.h  CTMasterViewController.m  HelloAPI-Info.plist  HelloAPI-Prefix.pch  main.m  project.plist
ios/HelloAPI.xcodeproj/: project.pbxproj
ios/HelloAPI.xcworkspace/: contents.xcworkspacedata
ios/HelloAPITests/: HelloAPITests-Info.plist  HelloAPITests.h  HelloAPITests.m
java/: README.md  build.gradle  config.properties
java/src/: Config.java  HelloApi.java  helloApi.java
javascript/: .gitignore  Gruntfile.coffee  README.md  config.js  index.html  package.json
javascript/src/: hello.coffee  hello.js  (+1 more)
kotlin/: README.md
node-js/: README.md  app.js  config.js  package.json
nodejs/: .gitignore  Gruntfile.coffee  README.md  create_config.sh  package.json
php/: README.md  app.php  config.php  index.php
python/: README.md  hello-api
python2/: config.py
python3/: hello-api
ruby/: .gitignore  Gemfile  README.md  config.yaml  hello-api
rust/: Cargo.toml  HACKING.md  README.md  rustfmt.toml
rust/examples/: fetch_products.rs
rust/src/: auth.rs  client.rs  error.rs  errors.rs  lib.rs  region.rs
rust/tests/: auth.rs
scala/: .gitignore  README.md  build.sbt
(+28 files in other folders)
