[package]
name = "commercetools"
version = "0.1.0"
authors = ["Yann Simon <yann.simon@commercetools.com>"]

[dependencies]
futures = "0.1.17"
hyper = "0.11"
tokio-core = "0.1.12"
hyper-tls = "0.1"
chrono = "0.3"
log = "0.3"
error-chain = "0.10"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.4"

[dev-dependencies.clap]
version = "2.9"
default-features = false
features = [ "suggestions", "color" ]
