[package]
name = "commercetools"
version = "0.1.0"
authors = ["Yann Simon <yann.simon@commercetools.com>"]
edition = "2018"

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"
chrono = "0.3"
log = "0.3"
failure = "0.1"
failure_derive = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.4"

[dev-dependencies.clap]
version = "2.9"
default-features = false
features = [ "suggestions", "color" ]
