[package]
name = "commercetools"
version = "0.1.0"
authors = ["Yann Simon <yann.simon@commercetools.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
http = "0.1"
chrono = "0.4"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.7"
hyper = "0.12"

[dev-dependencies.clap]
version = "2.33"
default-features = false
features = [ "suggestions", "color" ]
